welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:-10: error: Unmatched closing brace '}' ignored here
	}
        ^Array2:-9: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^Array2:-5: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^Array2:1: error: illegal start of statement (no modifiers allowed here)
override def run() {
^